# RyanData-Address-Utils

./: .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PR_CONFLICT_RESOLUTION.md  README.md  SCRIPTS-README.md  SUMMARY.md  codecov.yml  context7.json  coverage.xml  junit.xml  llms.txt  pyproject.toml  reproduce_issue.py  resolve-pr2.sh  resolve-pr4.sh
.cursor/: agents.md
.cursor/plans/: processlog_refactoring_0243bb1a.plan.md
.github/: release_notes.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml  typecheck.yml  version-bump.yml  version-check.yml
docs/: ARCHITECTURE.md  diagrams.md
resolved-workflows/: README.md  lint.yml  setup-python-uv-action.yml  tests.yml  typecheck.yml
src/ryandata_address_utils/: __init__.py  api.py  models.py  pandas_ext.py  protocols.py  service.py  setup_cli.py
src/ryandata_address_utils/core/: __init__.py  address_formatter.py  cleaning.py  errors.py  factory.py  tracking.py  zip_normalizer.py
src/ryandata_address_utils/core/validation/: __init__.py  base.py  composite.py  protocols.py
src/ryandata_address_utils/data/: __init__.py  base.py  constants.py  csv_source.py  factory.py
src/ryandata_address_utils/models/: __init__.py  address.py  builder.py  enums.py  errors.py  results.py  utils.py
src/ryandata_address_utils/parsers/: __init__.py  base.py  factory.py  usaddress_parser.py
src/ryandata_address_utils/remote/: __init__.py  client.py  container.py
src/ryandata_address_utils/validation/: __init__.py  base.py  validators.py
tests/: __init__.py  conftest.py  strategies.py  test_address_parser.py  test_factories.py  test_hypothesis_properties.py  test_hypothesis_stateful.py  test_libpostal_warning.py  test_pandas_utils.py  test_remote_client.py  test_setup_cli.py  test_setup_cli_branches.py  test_unified_model.py
