[project]
name = "ryandata-address-utils"
version = "0.5.0"
description = "A Python address parser using usaddress with Pydantic models, validation, and extensible architecture"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Abstract-Data", email = "dev@abstractdata.io" }
]
keywords = ["address", "parser", "usaddress", "pydantic", "validation", "geocoding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
requires-python = ">=3.9,<=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "usaddress>=0.5.16",
    "typing-extensions>=4.0.0",
    "typer>=0.12.5",
    "trogon>=0.6.0",
    "eval-type-backport>=0.3.1",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
]

[project.scripts]
ryandata-address-utils = "ryandata_address_utils:main"
ryandata-address-utils-setup = "ryandata_address_utils.setup_cli:app"
ryandata_address_utils = "ryandata_address_utils.setup_cli:cli_entrypoint"

[project.urls]
Homepage = "https://github.com/Abstract-Data/RyanData-Address-Utils"
Repository = "https://github.com/Abstract-Data/RyanData-Address-Utils.git"
Issues = "https://github.com/Abstract-Data/RyanData-Address-Utils/issues"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
    "python-semantic-release>=9.0.0",
    "codecov>=2.1.13",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ryandata_address_utils"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ryandata_address_utils/**/*",
    "LICENSE",
    "README.md",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.semantic_release]
version_variables = [
    "pyproject.toml:version",
    "src/ryandata_address_utils/__init__.py:__version__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "UP007",  # Use X | Y - not compatible with Pydantic on Python 3.9
    "UP045",  # Use X | None - not compatible with typer on Python 3.9
]

[tool.mypy]
# Note: mypy 1.13.0+ requires python_version >= 3.9
# The package supports Python 3.8+, but we use 3.9 for type checking
# All files use 'from __future__ import annotations' for forward compatibility
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
